# MyLibraries

./: .gitignore  CMakeLists.txt  LICENSE  README.md  temporaryFile.cpp
ConsShell/: CMakeLists.txt
ConsShell/src/: Console_Editor.cpp  Console_IO.cpp  Console_IO.h  Console_Input.cpp  Console_Output.cpp
Id_Manager/: Id_Manager.h  Id_Manager.inl  README.md
Id_Manager/include/: Id_Manager.h
Id_Manager/src/: Id_Manager.inl
Id_Manager/test/: CMakeLists.txt
Id_Manager/test/IdAreaTest/: CMakeLists.txt
Id_Manager/test/IdAreaTest/src/: IdAreaTest.cpp
Id_Manager/test/IdManagerTest/: CMakeLists.txt
Id_Manager/test/IdManagerTest/src/: IdManagerTest.cpp
Id_Manager/test/IdsContainerTest/: CMakeLists.txt
Id_Manager/test/IdsContainerTest/src/: IdsContainerTest.cpp
Id_Manager/test/src/: IdManagerTest.cpp
XmlSave/: CMakeLists.txt
doc/: Doxyfile
doc/html/: Console__IO_8h.html  Console__IO_8h_source.html  IdManagement_8h.html  IdManagement_8h.js  IdManagement_8h_source.html  MainPage_8md.html  ONF_8h.html  ONF_8h.js  ONF_8h_source.html  VersionNames_8h.html  VersionNames_8h.js  VersionNames_8h_source.html  _console___i_o_8h.html  _console___i_o_8h_source.html  _console_constructor_8h.html  _console_constructor_8h.js  _console_constructor_8h_source.html  _editing_strings_8h.html  _editing_strings_8h.js  _editing_strings_8h_source.html  _id_management_8h.html  _id_management_8h.js  _id_management_8h_source.html  _id_range_test_8cpp.html  _id_range_test_8cpp.js  _main_page_8md.html  _o_n_f_1_1_range_id_manager.html  _o_n_f_8h.html  _o_n_f_8h.js  _o_n_f_8h_source.html  _r_e_a_d_m_e_8md.html  _stylesheet_8h.html  _stylesheet_8h.js  _stylesheet_8h_source.html  _type_pairs_8inl.html  _universal_definitions_8h.html  _universal_definitions_8h.js  _universal_definitions_8h_source.html  _version_names_8h.html  _version_names_8h.js  (+139 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_7.js  defines_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+46 more)
doc/style/: Standard.md  customdoxygen.css  footer.html
include/: ConsoleConstructor.h  Console_IO.h  EditingStrings.h  IdManagement.h  IdManager.h  IdManager.inl  ONF.h  Stylesheet.h  TypePairs.inl  UniversalDefinitions.h  VersionNames.h  XmlParser.h
include/EditingStrings/: EditingStrings.inl
include/IdManagement/: IdContainer.inl  IdRange.inl  RangeIdManager.inl
include/Stylesheet/: Stylesheet.inl  StylesheetCreator.inl
include/XmlSave/: SaveModule.h  TagStructure.h  XmlFilter.h
lib/PDCurses 3.9 CMake/: CMakeLists.txt
src/: ConsoleConstructor.cpp  test.cpp
src/ConsShell/: Console_Editor.cpp  Console_IO.cpp  Console_Input.cpp  Console_Output.cpp
src/XmlSave/: SaveModule.cpp  TagStructure.cpp  XmlFilter.cpp
test/: CMakeLists.txt
test/Common/: CMakeLists.txt  CommonTest.cpp
test/ConsoleConstructor/: ConsoleConstructorTest.cpp
test/EditingStrings/: EditingStringsTest.cpp
test/IdArea/: CMakeLists.txt  IdAreaTest.cpp
test/IdContainer/: CMakeLists.txt  IdContainerTest.cpp
test/IdManagement/: CommonTest.cpp  IdContainerTest.cpp  RangeIdManagerTest.cpp
test/IdManager/: CMakeLists.txt  IdManagerTest.cpp
test/IdRange/: CMakeLists.txt  IdRangeTest.cpp
test/Id_Manager/test1/: CMakeLists.txt  test1.cpp
test/RangeIdManager/: CMakeLists.txt  RangeIdManagerTest.cpp
